--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "type": "git",
     "url": "git+https://github.com/wangtian24/vrubi.git"
   },
-  "keywords": ["rubiks-cube", "solver", "vision", "threejs"],
+  "keywords": [
+    "rubiks-cube",
+    "solver",
+    "vision",
+    "threejs"
+  ],
   "author": "Tian Wang",
   "license": "MIT",
   "bugs": {
@@ -24,5 +29,8 @@
   "devDependencies": {
     "three": "^0.172.0",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "cubejs": "^1.3.2"
   }
 }
